Fix: Select input field text overlapping issue

--- a/src/common-editor.scss
+++ b/src/common-editor.scss
@@ -447,8 +447,13 @@ label.wp-block-uagb-blockquote__via-label svg {
 	vertical-align: middle;
 }
 
-.components-select-control__input {
+// Select control text going out of screen.
+
+.uagb-inspector-tab .components-select-control .components-input-control__container .components-select-control__input {
 	text-transform: capitalize;
+	line-height: unset;
+	height: 35px;
+	padding-bottom: 2px;
 }
 
 .components-panel__body.uagb-repeater-panel {
